fix: LoadingSpinner not visible

--- a/components/ui/Loading.module.css
+++ b/components/ui/Loading.module.css
@@ -3,8 +3,8 @@
   border-radius: 50%;
   animation: spin 1s infinite linear;
   aspect-ratio: 1;
-  background: radial-gradient(farthest-side,hsl(var(--p)) 94%,#0000) top/6px 6px no-repeat,
-    conic-gradient(#0000 30%,hsl(var(--p)));
+  background: radial-gradient(farthest-side,var(--primary) 94%,#0000) top/6px 6px no-repeat,
+    conic-gradient(#0000 30%,var(--primary));
   mask: radial-gradient(farthest-side,#0000 calc(100% - 6px),#000 0);
 }
 @keyframes spin { 
